# todo

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: code-quality.yml  release.yml  rust-clippy.yml  test.yml
src/: config.rs  db.rs  lib.rs  main.rs  storage.rs  utils.rs
src/commands/: add.rs  complete.rs  deinit.rs  delete.rs  edit.rs  init.rs  list.rs  mod.rs
src/db/: store.rs  task.rs
src/model/: mod.rs  task.rs
tests/: config_tests.rs
