[package]
name = "todo"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.0"
dirs = "5.0.1"
env_logger = "0.11.3"
home = "0.5.9"
log = "0.4.22"
serde = { version = "1.0.225", features = ["derive"] }
thiserror = "1.0.62"
toml = "0.9.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.10.1"
